--- a/cucumber-js.conf
+++ b/cucumber-js.conf
@@ -1,3 +1,4 @@
+token =  43263099071432158841519879100311912493818530889094560434
 language = 'cucumber'
 framework = 'javascript'
 output_directory = './features'
